--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -1,5 +1,24 @@
+@font-face {
+  font-family: 'Satoshi';
+  src: url('../fonts/Satoshi-Medium.woff2') format('woff2'),
+       url('../fonts/Satoshi-Medium.woff') format('woff'),
+       url('../fonts/Satoshi-Medium.ttf') format('truetype');
+       font-weight: 500;
+       font-display: swap;
+       font-style: normal;
+}
+@font-face {
+  font-family: 'Satoshi';
+  src: url('../fonts/Satoshi-Bold.woff2') format('woff2'),
+       url('../fonts/Satoshi-Bold.woff') format('woff'),
+       url('../fonts/Satoshi-Bold.ttf') format('truetype');
+       font-weight: 700;
+       font-display: swap;
+       font-style: normal;
+}
 html {
   box-sizing: border-box;
+  font-size: 16px;
 }
 *,
 *::before,
@@ -8,5 +27,7 @@ html {
 }
 body {
   font-family: $fontTitle;
+  -webkit-font-smoothing: antialiased;
+  font-weight: $fontMedium;
   color: $colorDarkTxt;
 }
